RE add 2 stories

--- a/journal/202303.md
+++ b/journal/202303.md
@@ -468,7 +468,7 @@ Bittrex's [Instant Buy](https://global.bittrex.com/instant) feature did not work
 
 Binance [announced](https://www.reddit.com/r/decred/comments/123tn1i/binance_close_isolated_margin_for_decred_and_some/) the delisting of DCR/BTC and DCR/USDT pairs from Isolated Margin. For context, NEBL and XVG are also part of this delisting batch. Regular (Spot) DCR trading is NOT affected by this. On a related note, personal quota in the Simple Earn product has [increased](https://matrix.to/#/!aNnAOHkWUdNcEXRGjJ:decred.org/$Iv4uASbdiLZIMZWbVVYFqY-motmynF19DH5MYvSRgNo?via=decred.org&via=matrix.org&via=planetdecred.org) from 300 to 10,000 DCR per person. As of Mar 27, Simple Earn showed 1.67% APR (while staking DCR directly yields about 7%/year).
 
-Bittrex made a big announcement about [shutting down U.S. operations](https://twitter.com/BittrexExchange/status/1641879884682387457) due to regulatory and economic challenges. Per their [timeline](https://bittrex.zendesk.com/hc/en-us/articles/10080271948701), fiat withdrawals must conclude by Apr 24 and crypto withdrawals by Apr 29 (sooner is better). Bittrex Global and its non-U.S. customers are unaffected. The move came after Bittrex was [fined](https://www.reuters.com/business/finance/crypto-exchange-bittrex-fined-53-mln-by-us-treasury-dept-2022-10-11/) in December for $29 million for violating sanctions and AML regulations. Despite closing U.S. operations Bittrex may be hit by a [lawsuit](https://reason.com/2023/04/19/sec-sues-crypto-exchange-bittrex-shortly-after-it-announces-its-leaving-u-s-markets/) from SEC for operating an unregistered securities exchange.
+Bittrex made a big announcement about [shutting down U.S. operations](https://twitter.com/BittrexExchange/status/1641879884682387457) due to regulatory and economic challenges. Per their [timeline](https://bittrex.zendesk.com/hc/en-us/articles/10080271948701), fiat withdrawals must conclude by Apr 24 and crypto withdrawals by Apr 29 (sooner is better). Bittrex Global and its non-U.S. customers are unaffected. The move came after Bittrex was [fined](https://www.reuters.com/business/finance/crypto-exchange-bittrex-fined-53-mln-by-us-treasury-dept-2022-10-11/) in December for $29 million for violating sanctions and AML regulations. Despite closing U.S. operations Bittrex may be hit by a [lawsuit](https://reason.com/2023/04/19/sec-sues-crypto-exchange-bittrex-shortly-after-it-announces-its-leaving-u-s-markets/) from the SEC for operating an unregistered securities exchange.
 
 Join our [#ecosystem](https://chat.decred.org/#/room/#ecosystem:decred.org) chat to follow Decred ecosystem updates.
 
@@ -575,8 +575,6 @@ _Image: DCRDEX monthly volume in USD._
 
 { _Story ideas:
 
-- Dubai banned privacy coins
-  - https://www.coindesk.com/policy/2023/02/08/dubai-prohibits-privacy-coins-under-new-crypto-rules/
 - https://www.bloomberg.com/news/articles/2023-03-02/uk-banks-ramp-up-crypto-restrictions-with-new-retail-limits
 - SEC threatens Coinbase
   - https://reason.com/2023/03/23/sec-to-coinbase-nice-crypto-exchange-you-got-there-itd-be-a-shame-if-something-happened-to-it/
@@ -589,6 +587,8 @@ _Image: DCRDEX monthly volume in USD._
 Three US banks [failed in March](https://www.decredmagazine.com/is-this-the-start-of-a-new-banking-crisis/), the largest of them being [Silicon Valley Bank](https://www.nytimes.com/2023/03/10/business/silicon-valley-bank-stock.html) (SVB), which was the [second largest](https://www.decredmagazine.com/is-this-the-start-of-a-new-banking-crisis/) US bank failure of all time. One of the ripple effects was a temporary [de-pegging](https://www.coindesk.com/markets/2023/03/11/usdc-stablecoin-depegs-from-1-circle-says-operations-are-normal/) of the USDC stablecoin as news emerged that ~10% of the funds backing USDC were stuck with SVB when the FDIC stepped in to take over before Circle's withdrawal was processed.
 
 Binance has been [charged](https://decrypt.co/124800/binance-cftc-lawsuit-crypto) by the CFTC in a wide ranging complaint which covers a number of offences, including weak KYC/AML that allowed US customers to trade derivatives and securities which they were not registered to offer, allowed money laundering to occur, and traded against their own customers. The 74 page [complaint](https://www.docdroid.net/60YAbCz/cftc-binance-pdf) includes quotes from messages sent between internal staff, including such gems as "I HAZ NO CONFIDENCE IN OUR GEOFENCING", from the money laundering reporting officer. The complaint also mentions Bitcoin and Ethereum as commodities, in service to defining Binance's activities as subject to CFTC's jurisdiction. CZ [reacted](https://twitter.com/cz_binance/status/1640372505046052866) with "4" [meaning](https://twitter.com/cz_binance/status/1610018096122851328) "Ignore FUD", and later with a longer [response](https://www.binance.com/en/blog/from-cz/czs-response-to-the-cftc-complaint-2408916493005890282) which recaps how much Binance has [invested](https://decrypt.co/124683/binance-cftc-lawsuit-response) in compliance and cooperation with regulators. Some analysts are [pessimistic](https://twitter.com/adamscochran/status/1640378686397448192) on Binance's chances against CFTC.
+
+Coinbase has been [threatened](https://reason.com/2023/03/23/sec-to-coinbase-nice-crypto-exchange-you-got-there-itd-be-a-shame-if-something-happened-to-it/) by the SEC of a possible legal action for violations of the federal securities laws. Coinbase representative went public about company's frustration about SEC's unclear selection of cryptoassets considered to be securities, and cited SEC's denial to tell which specific assets traded on Coinbase platforms are securities.
 
 Justin Sun and his companies Tron Foundation, BitTorrent Foundation and Rainberry have been [sued](https://www.sec.gov/news/press-release/2023-59) by the SEC for violations including sale of unregistered securities (TRX and BTT) and manipulating the secondary market for TRX through extensive wash trading. A number of celebrities who were engaged to promote Sun's projects have also been sued in the same motion for promoting TRX/BTT without disclosing the arrangement, they include Lindsey Lohan, Jake Paul, Soulja Boy, and Lil Yachty. The period for which Sun is accused of wash trading covers April 2018 to February 2019, during which time Sun allegedly provided between 4.5 million and 7.4 million TRX and instructed staff to wash trade it using two of his accounts.
 
@@ -607,6 +607,8 @@ LinksDAO is seemingly on course to [achieve](https://twitter.com/LinksDAO/status
 The "Skull of Satoshi", an art installation commissioned by Greenpeace as part of a campaign to highlight the impact of PoW mining, has been [adopted](https://decrypt.co/124622/skull-satoshi-artist-says-was-wrong-bitcoin-mining) by the Bitcoin community as its own. The artist has come to the realization that it is not a black and white issue, as they thought it was when they began creating the piece.
 
 Ron DeSantis, Governor of Florida, has [proposed](https://www.coindesk.com/policy/2023/03/20/florida-governor-ron-desantis-proposes-law-to-ban-cbdcs/) legislation to ban the acceptance of Central Bank Digital Currency (CBDC) in the state. [Doubts](https://www.coindesk.com/consensus-magazine/2023/03/22/cbdc-desantis-ban-digitaldollar/) have been raised whether the legislation is workable, it is likely that a Federal push for a CBDC could overturn pre-existing state law.
+
+Dubai has published new laws in February that ban issuance and use of [anonymity-enhancing cryptocurrencies](https://www.coindesk.com/policy/2023/02/08/dubai-prohibits-privacy-coins-under-new-crypto-rules/) like Monero.
 
 Nigeria has been pushing its CBDC, when [incentives](https://www.coindesk.com/consensus-magazine/2023/03/06/nigerians-rejection-of-their-cbdc-is-a-cautionary-tale-for-other-countries/) like discounts on taxi fares didn't work to increase adoption they restricted access to cash to force the issue, but not people are protesting about the lack of cash and still adoption of the CBDC is at less than 0.5% of the population.
 
