RE add 1 story and links

--- a/journal/202303.md
+++ b/journal/202303.md
@@ -575,12 +575,12 @@ _Image: DCRDEX monthly volume in USD._
 
 { _Story ideas:
 
-- https://www.bloomberg.com/news/articles/2023-03-02/uk-banks-ramp-up-crypto-restrictions-with-new-retail-limits
-- SEC threatens Coinbase
-  - https://reason.com/2023/03/23/sec-to-coinbase-nice-crypto-exchange-you-got-there-itd-be-a-shame-if-something-happened-to-it/
-- WSJ USDT piece 
+- USDT shenanigans: Fake documents and owning too much US debt
+  - https://www.reddit.com/r/Superstonk/comments/11he9t0/tether_used_falsified_documents_and_shell/
   - https://archive.is/50s0q
 - JP Morgan iced Gemini
+  - https://www.reuters.com/business/finance/jpmorgan-ending-banking-relationship-with-crypto-exchange-gemini-source-2023-03-08/
+  - https://www.coindesk.com/business/2023/03/08/jpmorgan-is-cutting-ties-with-crypto-exchange-gemini-source/
   - https://matrix.to/#/!lDZCzVQjFoJsXMPkvr:decred.org/$rkNEM8oMecKe8NTM2_kPoIvxle0FtNgCJxn22Jq06oI
 }
 
@@ -609,6 +609,8 @@ The "Skull of Satoshi", an art installation commissioned by Greenpeace as part o
 Ron DeSantis, Governor of Florida, has [proposed](https://www.coindesk.com/policy/2023/03/20/florida-governor-ron-desantis-proposes-law-to-ban-cbdcs/) legislation to ban the acceptance of Central Bank Digital Currency (CBDC) in the state. [Doubts](https://www.coindesk.com/consensus-magazine/2023/03/22/cbdc-desantis-ban-digitaldollar/) have been raised whether the legislation is workable, it is likely that a Federal push for a CBDC could overturn pre-existing state law.
 
 Dubai has published new laws in February that ban issuance and use of [anonymity-enhancing cryptocurrencies](https://www.coindesk.com/policy/2023/02/08/dubai-prohibits-privacy-coins-under-new-crypto-rules/) like Monero.
+
+Two UK banks have ramped up retail customers' access to crypto. Nationwide introduces a daily limit of £5,000 on debit-card purchases, while disallowing to use credit cards to buy crypto. HSBC has also blocked crypto purchases with its credit cards.
 
 Nigeria has been pushing its CBDC, when [incentives](https://www.coindesk.com/consensus-magazine/2023/03/06/nigerians-rejection-of-their-cbdc-is-a-cautionary-tale-for-other-countries/) like discounts on taxi fares didn't work to increase adoption they restricted access to cash to force the issue, but not people are protesting about the lack of cash and still adoption of the CBDC is at less than 0.5% of the population.
 
