--- a/journal/202303.md
+++ b/journal/202303.md
@@ -10,7 +10,9 @@ Highlights of March: {
 
 - DCRDEX 0.6 beta testing and release candidates
 
-- Proposal activity
+- 1/89 as a separate bullet I think, it's big
+
+- Other proposal activity
 
 - other?
 
@@ -34,14 +36,31 @@ Contents: { _Sync ToC at the very end, when all text is finished_ }
 
 ## Proposal to change PoW algorithm to BLAKE3 and PoW/PoS split to 1/89
 
-{ it's big so we ann it here briefly }
+A major change is coming to Decred's consensus and economics. A [proposal](https://proposals.decred.org/record/a8501bc) has been submitted to further reduce the Proof of Work rewards from 10% to 1%, increase Proof of Stake rewards from 80% to 89%, and change the mining algorithm from BLAKE-256 to BLAKE3. This will retire all currently mining ASIC hardware with the goal to fix the price discovery of DCR. As of writing the proposal has been approved. Next steps will be to implement new consensus rules in code, release a new version of core software, let the network upgrade and let the stakeholders vote to activate the new rules. All of it should take a few months and there will be more communication about each stage on Decred's [official channels](https://decred.org/community/).
 
 
 ## Bison Relay v0.1.6 Release Candidate
 
-{ highlights, links }
+Highlights of v0.1.5:
 
-{ cover both v0.1.5 and v0.1.6 rc1 }
+- New Payment Stats page
+- QR codes for deposit addresses
+- More informative error messages
+- Fixed group chat member list getting out of sync
+- Fixed group chat message ordering
+- Other bug fixes and UI tweaks
+
+Highlights of v0.1.6 RC1:
+
+- New version of group chats with support for multiple admins
+- Sidebar notification for new messages
+- More visible New Post button
+- Highlighting of messages with user's nick name
+- Comments on relayed posts will be prevented
+- Automatic group chat invites bundled in invite files
+- Many bug fixes and UI improvements in both GUI and CLI apps
+
+Get the latest release binaries on [GitHub](https://github.com/companyzero/bisonrelay/releases) (as of writing the [Downloads page](https://bisonrelay.org/download/) at bisonrelay.org still shows v0.1.4). Bug reports and feedback are welcome in [GitHub issue tracker](https://github.com/companyzero/bisonrelay/issues) and the [#br Matrix chat](https://chat.decred.org/#/room/#br:decred.org).
 
 
 ## Development
