--- a/journal/202303.md
+++ b/journal/202303.md
@@ -176,29 +176,23 @@ Client changes:
 
 Client fixes:
 
-- Fixed displayed status of [canceled orders](https://github.com/decred/dcrdex/pull/2180). { _may group_ }
 - Fixed empty [gaps between candles](https://github.com/decred/dcrdex/pull/2195) on the price chart.
 - Fixed inconsistent decimal [precision](https://github.com/decred/dcrdex/pull/2208) on different UI elements.
 - Fixed [price](https://github.com/decred/dcrdex/pull/2214) not being updated in some places.
 - Fixed repeated [icon fetching](https://github.com/decred/dcrdex/pull/2217) on the Markets page.
 - Fixed reorg indication for [DCR](https://github.com/decred/dcrdex/pull/2219) and [BTC](https://github.com/decred/dcrdex/pull/2225) in SPV mode to match dcrd and dcrwallet. Specifically, blocks that are not on the main chain ("orphaned" blocks) will be reported as having "-1" confirmations.
 - Fixed [wallet birthday](https://github.com/decred/dcrdex/pull/2236) showing UTC date instead of system's local date.
-- Fixed [cancel orders](https://github.com/decred/dcrdex/pull/2262) showing up in the order book. { _may group_ }
-- Fixed a chance to get [negative amount](https://github.com/decred/dcrdex/pull/2253) on Send form when the tx fee is comparable to amount left in the wallet. { _may group_ }
-- Fixed switching of [asset icons](https://github.com/decred/dcrdex/pull/2265). { _group_ }
-- Fixed concurrency bugs { 2189 }
-- Fixed logging { 2194 2272 }
+- Fixed ~4 UI bugs and ~1 concurrency bugs.
 
 Ethereum, client:
 
 - Improved handling of poor connections to RPC providers when [shutting down](https://github.com/decred/dcrdex/pull/2191) DEX client.
 - Added [Ethereum wallet guide](https://github.com/decred/dcrdex/pull/2233) wiki page.
 - Added a 20% buffer to the [fee estimate](https://github.com/decred/dcrdex/pull/2234) when sending ETH to ensure it will succeed even if network's base fee jumps right before sending.
-- Improved error message when [failing to connect](https://github.com/decred/dcrdex/pull/2244) to RPC providers. { _group_ }
 - Updated to [Geth v1.11](https://github.com/decred/dcrdex/pull/2238). This was a required update for the Shanghai network upgrade scheduled on April 12, 2023.
 - Fixed token's [parent asset balance](https://github.com/decred/dcrdex/pull/2201) not being updated when cancelling an order involving that token.
-- Fixed [unconfirmed transactions](https://github.com/decred/dcrdex/pull/2211) not being reflected in the available balance. { _second fix in 2247_ }
-- Fixed display of [provider domain](https://github.com/decred/dcrdex/pull/2273) when there is an error. { _group_ }
+- Fixed [unconfirmed transactions](https://github.com/decred/dcrdex/pull/2211) not being reflected in the available balance.
+- Fixed error messages.
 
 Ethereum, server:
 
@@ -208,22 +202,17 @@ Fidelity bonds:
 
 - [UI updates](https://github.com/decred/dcrdex/pull/2200) to replace registration fees with bonds, including integration of bonds into account import and export flows. Different cases are considered when restoring from same or new app seed, and when using existing or creating new DEX account.
 - Implemented bonds funded [with BTC](https://github.com/decred/dcrdex/pull/2196) in both the client and the server. It will be possible to switch bonds to use a different asset, e.g. from DCR to BTC.
-- Fixed [logging](https://github.com/decred/dcrdex/pull/2220) of registration fees config where bonds config was expected. { _group_ }
 - Fixed "bond required" alert [not disappearing](https://github.com/decred/dcrdex/pull/2221) after bond was confirmed.
-- Fixed missed population of the ["Other"](https://github.com/decred/dcrdex/pull/2274) balance category for BTC ("Other" includes balances related to bonds). { _group_ }
 
 Other changes:
 
-- Added [Windows tray](https://github.com/decred/dcrdex/commit/3a216ce3f750fa5e2f270a26d998d674024eb1f1) build to build script. { _may group_ }
 - Added more strict server-side [checks](https://github.com/decred/dcrdex/pull/2248) for addresses used in swaps.
 - Updated [LTC dependencies](https://github.com/decred/dcrdex/pull/2268) to pull in a [critical fix](https://github.com/ltcsuite/ltcd/pull/25) for handling large transactions.
-- Test infra improvements. { 2204 }
-- Dependency updates. { 2232 }
+- Improvements in test infrastructure, build scripts, dependency updates.
 
 Client changes on `master` towards the next release (likely v0.6.1):
 
-- Notify the user about [unstable connection](https://github.com/decred/dcrdex/pull/2028). { _follow-up fix in 2235_ }
-- Log HTTP requests to app's [standard logger](https://github.com/decred/dcrdex/pull/2206). This disables log coloring but fixes time zone discrepancy on some systems. { _may group_ }
+- Notify the user about [unstable connection](https://github.com/decred/dcrdex/pull/2028).
 - Fixed error when [failing to subscribe](https://github.com/decred/dcrdex/pull/2252) to new header notifications from Ethereum RPC provider.
 
 Other stuff:
@@ -246,13 +235,6 @@ _[dcrdata](https://github.com/decred/dcrdata) is an explorer for Decred blockcha
 
 - Added an [allowed hosts](https://github.com/decred/dcrdata/pull/1958) middleware to ensure that any `Host` header value set in the request header is on a whitelist of hosts. This prevents invalid or unexpected `Host` values even if dcrdata is deployed without Nginx, which normally takes care of it.
 - Updated Decred and third party [Node.js modules](https://github.com/decred/dcrdata/pull/1952) and Go [dependencies](https://github.com/decred/dcrdata/pull/1959) to their latest versions, and moved builds to Go 1.19 and 1.20.
-
-
-### Timestamply
-
-_[Timestamply](https://github.com/decred/dcrtimegui) is a free service for timestamping files powered by Decred blockchain. A timestamp proves that a certain file has existed at a certain moment of time. This has a range of applications in protecting data integrity._
-
-- { check if anything new in: https://proposals.decred.org/record/855a506/comments/18 }
 
 
 ### Documentation
