--- a/journal/202303.md
+++ b/journal/202303.md
@@ -285,8 +285,7 @@ Common changes in GUI and CLI apps in v0.1.6:
 - Improved help text for [adding LN receive capacity](https://github.com/companyzero/bisonrelay/pull/166).
 - Disallow comments on [relayed posts](https://github.com/companyzero/bisonrelay/pull/162). Commenting on posts will require a key exchange with the original author. Also, once the original post is received from the author, all relayed copies will be removed in favor of the original.
 - Fixed bug preventing to accept [multiple group chat invites](https://github.com/companyzero/bisonrelay/pull/154) at the same time.
-- Dependency updates. { 165 171 175 180 }
-- Internal refactoring. { 188 }
+- Dependency updates and internal refactoring.
 
 GUI app changes in v0.1.6:
 
@@ -296,12 +295,10 @@ GUI app changes in v0.1.6:
 - Added a prominent [New Post](https://github.com/companyzero/bisonrelay/pull/159) button that is easy to access from different views.
 - Added [highlighting of messages](https://github.com/companyzero/bisonrelay/pull/164) that include user's nick.
 - Added [seed verification step](https://github.com/companyzero/bisonrelay/pull/174) where user is required to answer questions about their seed.
-- Allow to copy LN node [pubkey and channel points](https://github.com/companyzero/bisonrelay/pull/167) to clipboard. { _may group_ }
 - Added [About page](https://github.com/companyzero/bisonrelay/pull/175) with app version and copyright info.
-- UI alignment tweaks. { 157 }
 - Fixed segfault error [on close](https://github.com/companyzero/bisonrelay/pull/157).
-- Fixed errors when [leaving or killing](https://github.com/companyzero/bisonrelay/pull/170) group chats. { _group_ }
-- Fixed attempt to generate an avatar based on nick name's first letter when [nick is empty](https://github.com/companyzero/bisonrelay/pull/183). { _group_ }
+- Fixed errors when [leaving or killing](https://github.com/companyzero/bisonrelay/pull/170) group chats.
+- Smaller UI tweaks and fixes.
 
 CLI app changes in v0.1.6:
 
@@ -317,10 +314,6 @@ CLI app changes in v0.1.6:
 - Improved [cancellation and shutdown](https://github.com/companyzero/bisonrelay/issues/158) handling of the read loop.
 - Added methods for [managing group chats](https://github.com/companyzero/bisonrelay/pull/161) and [sending files](https://github.com/companyzero/bisonrelay/pull/179).
 - Fixed [reading](https://github.com/companyzero/bisonrelay/pull/161) from the message replay log file.
-
-Other changes in v0.1.6:
-
-- Test improvements { 189 }
 
 Other stuff and what to expect:
 
