add rel ext bullets and intro

--- a/journal/202303.md
+++ b/journal/202303.md
@@ -6,17 +6,10 @@ _Image: { "Title by @author. Description..." OR just "Description..." }_
 
 Highlights of March: {
 
-- 1/89 as a separate bullet I think, it's big
-
-- DCRDEX 0.6 beta testing and release candidates
-
-- Bison Relay v0.1.6 RC1
-
-- Other proposal activity
-
-- anything else?
-
-- 
+- A proposal was made and approved to change the block subsidy payout from 10/80 PoW/PoS to 1/89, as well as change the algorithm to exclude specialised hardware.
+- Bison Relay v0.1.5 was released and v0.1.6 RC1 is already out as well.
+- DCRDEX 0.6 is being beta tested and release candidates are appearing.
+- Decred Journal was one of six proposals to be approved for the month, with three for specific aspects of DCRDEX development.
 
 }
 
@@ -451,7 +444,7 @@ Secured the following media placements:
 
 **Attended:**
 
-- @arij gave a [presentation](https://decredcommunity.github.io/events/index/20230304.1) at Technopark Casablanca on  theme "Blockchain and Entrepreneurship". It started with an intro to blockchain tech use cases and its history, followed by a demo of Decrediton and Politeia. The attendees were of different backgrounds including finance, energy and IT sectors. The majority came in response to a LinkedIn announcement.
+- @arij gave a [presentation](https://decredcommunity.github.io/events/index/20230304.1) at Technopark Casablanca on the theme "Blockchain and Entrepreneurship". It started with an intro to blockchain tech use cases and its history, followed by a demo of Decrediton and Politeia. The attendees were of different backgrounds including finance, energy and IT sectors. The majority came in response to a LinkedIn announcement.
 - [Second event](https://decredcommunity.github.io/events/index/20230311.1) by the Decred Arabia team was co-organized by the sports association of Aïn Chock and the District Council of Aïn Chock Casablanca. @khalidesi presented an introduction to blockchains on day 1 and application of blockchains and the Decred example on day 2. The theme was to demonstrate how the blockchain can improve the way businesses operate and promote greater economic and social inclusion.
 
 **Upcoming**:
@@ -532,18 +525,13 @@ _Image: DCRDEX monthly volume in USD._
 
 ## Relevant External
 
-{ _Story ideas:
-
-- USDT shenanigans: Fake documents and owning too much US debt
-  - https://www.reddit.com/r/Superstonk/comments/11he9t0/tether_used_falsified_documents_and_shell/
-  - https://archive.is/50s0q
-- JP Morgan iced Gemini
-  - https://www.reuters.com/business/finance/jpmorgan-ending-banking-relationship-with-crypto-exchange-gemini-source-2023-03-08/
-  - https://www.coindesk.com/business/2023/03/08/jpmorgan-is-cutting-ties-with-crypto-exchange-gemini-source/
-  - https://matrix.to/#/!lDZCzVQjFoJsXMPkvr:decred.org/$rkNEM8oMecKe8NTM2_kPoIvxle0FtNgCJxn22Jq06oI
-  }
-
 Three US banks [failed in March](https://www.decredmagazine.com/is-this-the-start-of-a-new-banking-crisis/), the largest of them being [Silicon Valley Bank](https://www.nytimes.com/2023/03/10/business/silicon-valley-bank-stock.html) (SVB), which was the [second largest](https://www.decredmagazine.com/is-this-the-start-of-a-new-banking-crisis/) US bank failure of all time. One of the ripple effects was a temporary [de-pegging](https://www.coindesk.com/markets/2023/03/11/usdc-stablecoin-depegs-from-1-circle-says-operations-are-normal/) of the USDC stablecoin as news emerged that ~10% of the funds backing USDC were stuck with SVB when the FDIC stepped in to take over before Circle's withdrawal was processed.
+
+The operators of the Tether stablecoin allegedly used falsified documents and shell companies to get bank accounts, in an [article](https://www.wsj.com/articles/crypto-companies-behind-tether-used-falsified-documents-and-shell-companies-to-get-bank-accounts-f798b0a5) by the Wall Street Journal (non-paywalled [link](https://archive.is/50s0q)). WSJ reviewed a cache of emails from Tether staff which indicated a long-running effort to retain banking access by engaging in various schemes, including having someone in China making fake invoices and contracts to disguise deposits and withdrawals - a policy which was ultimately stopped when owner Stephen Moore wrote he “... would not want to argue any of the above in a potential fraud/money laundering case”. 
+
+Gemini have been [hit](https://www.reuters.com/business/finance/jpmorgan-ending-banking-relationship-with-crypto-exchange-gemini-source-2023-03-08/) with a similar issue in March when JP Morgan announced that it was cutting ties with the exchange. 
+
+Nic Carter has documented [evidence](https://www.reuters.com/business/finance/jpmorgan-ending-banking-relationship-with-crypto-exchange-gemini-source-2023-03-08/) for what he terms Operation Choke Point 2.0, a deliberate effort to restrict banking access to crypto firms by discouraging banks from dealing with them using various means.
 
 Binance has been [charged](https://decrypt.co/124800/binance-cftc-lawsuit-crypto) by the CFTC in a wide ranging complaint which covers a number of offences, including weak KYC/AML that allowed US customers to trade derivatives and securities which they were not registered to offer, allowed money laundering to occur, and traded against their own customers. The 74 page [complaint](https://www.docdroid.net/60YAbCz/cftc-binance-pdf) includes quotes from messages sent between internal staff, including such gems as "I HAZ NO CONFIDENCE IN OUR GEOFENCING", from the money laundering reporting officer. The complaint also mentions Bitcoin and Ethereum as commodities, in service to defining Binance's activities as subject to CFTC's jurisdiction. CZ [reacted](https://twitter.com/cz_binance/status/1640372505046052866) with "4" [meaning](https://twitter.com/cz_binance/status/1610018096122851328) "Ignore FUD", and later with a longer [response](https://www.binance.com/en/blog/from-cz/czs-response-to-the-cftc-complaint-2408916493005890282) which recaps how much Binance has [invested](https://decrypt.co/124683/binance-cftc-lawsuit-response) in compliance and cooperation with regulators. Some analysts are [pessimistic](https://twitter.com/adamscochran/status/1640378686397448192) on Binance's chances against CFTC.
 
