--- a/journal/202303.md
+++ b/journal/202303.md
@@ -31,7 +31,7 @@ Contents: { _Sync ToC at the very end, when all text is finished_ }
 
 ## Proposal to change PoW algorithm and reduce PoW rewards
 
-A major change is coming to Decred's consensus and economics. A [proposal](https://proposals.decred.org/record/a8501bc) has been submitted to further reduce the Proof of Work share of rewards from 10% to 1%, increase Proof of Stake rewards from 80% to 89%, and change the mining algorithm from BLAKE-256 to BLAKE3. This will remove all currently mining ASIC hardware from the netwok with the goal to fix the price discovery of DCR. As of writing the proposal has been approved. Next steps will be to implement new consensus rules in code, release a new version of core software, let the network upgrade and let the stakeholders vote to activate the new rules. All of it should take a few months and there will be more communication about each stage on Decred's [official channels](https://decred.org/community/).
+A major change is coming to Decred's consensus and economics. A [proposal](https://proposals.decred.org/record/a8501bc) has been submitted to further reduce the Proof of Work share of rewards from 10% to 1%, increase Proof of Stake rewards from 80% to 89%, and change the mining algorithm from BLAKE-256 to BLAKE3. This will remove all currently mining ASIC hardware from the network with the goal to fix the price discovery of DCR. As of writing the proposal has been approved. Next steps will be to implement new consensus rules in code, release a new version of core software, let the network install it and let the stakeholders vote to activate the new rules. All of it should take a few months and there will be more communication about each stage on Decred's [official channels](https://decred.org/community/).
 
 
 ## Bison Relay v0.1.6 Release Candidate
@@ -51,11 +51,11 @@ Highlights of v0.1.6 Release Candidate 1:
 - Sidebar notification for new messages
 - More visible New Post button
 - Highlighting of messages with user's nick name
-- Comments on relayed posts will be prevented
+- All post comments are directed to the original post, comments on relayed copies are disabled
 - Automatic group chat invites bundled in invite files
 - Many bug fixes and UI improvements in both GUI and CLI apps
 
-Get the latest release binaries on [GitHub](https://github.com/companyzero/bisonrelay/releases) (as of writing the [Downloads page](https://bisonrelay.org/download/) at bisonrelay.org still shows v0.1.4). Bug reports and feedback are welcome in the [GitHub issue tracker](https://github.com/companyzero/bisonrelay/issues) and the [#br chat](https://chat.decred.org/#/room/#br:decred.org) on Matrix and Bison Relay itself.
+Get the latest release binaries on [GitHub](https://github.com/companyzero/bisonrelay/releases) (as of writing the [Downloads page](https://bisonrelay.org/download/) at bisonrelay.org still shows v0.1.4). Bug reports and feedback are welcome in the [GitHub issue tracker](https://github.com/companyzero/bisonrelay/issues) and the [#br chat](https://chat.decred.org/#/room/#br:decred.org) on Matrix or Bison Relay itself.
 
 
 ## Development
@@ -69,7 +69,7 @@ _[dcrd](https://github.com/decred/dcrd) is a full node implementation that power
 
 Hardening of consensus change voting code continued from [last month](202302.md#dcrd):
 
-- Enhanced startup [validation](https://github.com/decred/dcrd/pull/3068) of deployment parameters to ensure they satisfy the assumptions that the vote tallying logic relies on. For example, it checks that each vote has exactly one Abstain and one No choice, that there are no duplicate vote choices, and that choices are properly encoded in bits. This may unlock future optimizations and simplifications of code related to vote tallying.
+- Enhanced startup [validation](https://github.com/decred/dcrd/pull/3068) of deployment parameters to ensure they satisfy the assumptions that the vote tallying logic relies on. For example, it checks that each vote has exactly one Abstain and one No choice, that there are no duplicate vote choices, and that choices are properly encoded in bits. This allows to optimize and simplify code related to vote tallying.
 - Added validation to ensure consensus change vote parameters [don't use special bits](https://github.com/decred/dcrd/pull/3073) reserved for approving or disapproving the previous block.
 - Added validation to ensure that bits used by different votes in the same voting batch [do not overlap](https://github.com/decred/dcrd/pull/3077).
 - Added validation rejecting vote choices with [empty IDs](https://github.com/decred/dcrd/pull/3079). IDs are short strings summarizing what the vote choice means, they are normally `"yes"`, `"no"` or `"abstain"`.
@@ -89,7 +89,7 @@ Other changes:
 
 _[dcrwallet](https://github.com/decred/dcrwallet) is a wallet server used by command-line and graphical wallet apps._
 
-- Removed needless [balance calculation](https://github.com/decred/dcrwallet/pull/2203) when using the ticket auto buyer and balance to maintain is unset or zero. On busier wallets this results in a significant performance improvement.
+- Removed needless [balance calculation](https://github.com/decred/dcrwallet/pull/2203) when using the ticket auto buyer with balance to maintain unset or zero. On busier wallets this results in a significant performance improvement.
 - Migrated to [VSP client](https://github.com/decred/dcrwallet/pull/2213) provided by the [vspd](https://github.com/decred/vspd) repository. It is mostly the same code borrowed from dcrwallet, but consolidating VSP code in one place allows for removal of duplication that may fall out of sync, such as error codes, data structures, etc.
 - Fixed [data race](https://github.com/decred/dcrwallet/pull/2210) in SPV mode.
 - Fixed possibility of [missing relevant transactions](https://github.com/decred/dcrwallet/pull/2212) in case the ticket purchase request is cancelled due to a change of the ticket price.
@@ -110,7 +110,7 @@ Other:
 
 ### vspd
 
-_[vspd](https://github.com/decred/vspd) is server software for running a Voting Service Provider. A VSP votes on behalf of its users 24/7 and cannot steal funds._
+_[vspd](https://github.com/decred/vspd) is server software used by Voting Service Providers. A VSP votes on behalf of its users 24/7 and cannot steal funds._
 
 Changes to make vspd code easier to consume by other software (such as dcrwallet):
 
@@ -119,7 +119,7 @@ Changes to make vspd code easier to consume by other software (such as dcrwallet
 
 Other changes:
 
-- Added [rate limiting](https://github.com/decred/vspd/pull/373) of admin login requests (max 3 attempts per second), and a sample Nginx config to support it.
+- Added [rate limiting](https://github.com/decred/vspd/pull/373) of admin login requests (max 3 attempts per second) and a sample Nginx config to support it.
 - Added new [development tool](https://github.com/decred/vspd/pull/366) for testing various steps of the VSP protocol: create VSP fee transaction, send it to the VSP, query ticket status, and change ticket's vote choices. VSP operators can use this tool to verify that their VSP works correctly.
 - Increased test coverage.
 
@@ -141,17 +141,17 @@ _[dcrlnd](https://github.com/decred/dcrlnd) is Decred's Lightning Network node s
 [LN Liquidity Provider](https://github.com/decred/dcrlnlpd) (LP):
 
 - Added client-side [sanity checks](https://github.com/decred/dcrlnlpd/pull/9) to fail earlier when it is not possible to get an inbound channel from the LP. The client will use server's policy to determine if the server can create a channel of the desired size, and if the client will be able to pay for it. This makes it possible to avoid fetching an invoice that will not be paid.
-- Capacity to [configure](https://github.com/decred/dcrlnlpd/pull/9) LP server's invoice expiration policy. A client can request the LP server to open Lightning Network channels for it. To pay for this service client must pay an invoice generated by the server. Server operator can now configure how long an invoice is valid for, and also how long a client must wait before requesting a new invoice.
+- Capacity to [configure](https://github.com/decred/dcrlnlpd/pull/9) LP server's invoice expiration policy. Invoices are generated by the server to collect fees for opening LN channels to clients. Server operator can now configure how long invoices are valid for, and how long clients must wait before requesting a new invoice.
 - Updated [dependencies](https://github.com/decred/dcrlnlpd/pull/10).
 
-LN Liquidity Provider is software that takes control of a normal LN node and adds one useful feature to it. Client software can request the LP to open a channel back to the client. This gives the client additional inbound capacity and allows them to receive more funds over LN. The LP operator collects a small fee for the service. This feature is heavily used by Bison Relay. { _is it a correct description? And does LP exist to enable light clients that don't want to run a full LN node? And can LP be used to create arbitrary channels in the network or just to self?_ }
+LN Liquidity Provider is software that takes control of a normal LN node and adds one useful feature to it: client software can ask the LP to open a channel back to the client. This gives the client additional inbound capacity and allows them to receive more funds over the Lightning Network. In return the LP operator collects a small fee for the service. { _is it a correct description? And does LP exist to enable light clients that don't want to run a full LN node? And can LP be used to create arbitrary channels in the network or just to self?_ }
 
-Since Bison Relay is now a major user of Decred's Lightning Network, it benefits from improvements in the base LN software and the LN Liquidity Provider.
+Bison Relay is a major user of Decred's Lightning Network and benefits from improvements in both the base LN software and the Liquidity Provider.
 
 
 ### cspp
 
-_[cspp](https://github.com/decred/cspp) is a server for coordinating coin mixes using the CoinShuffle++ protocol. It is non-custodial, i.e. does not hold any funds._
+_[cspp](https://github.com/decred/cspp) is a server for coordinating coin mixes using the CoinShuffle++ protocol. It is non-custodial, i.e. never holds any funds. CSPP is part of StakeShuffle, Decreds privacy system._
 
 - Updated [Go dependencies](https://github.com/decred/cspp/pull/89).
 
@@ -160,7 +160,7 @@ _[cspp](https://github.com/decred/cspp) is a server for coordinating coin mixes 
 
 _[DCRDEX](https://github.com/decred/dcrdex) is a non-custodial, privacy-respecting exchange for trustless trading, powered by atomic swaps._
 
-Internal pre-release testing of the major v0.6 release has started with a beta and two release candidates [tagged](https://github.com/decred/dcrdex/tags) in March. All changes reported below will be included in the v0.6 release.
+Internal pre-release testing of the big v0.6 release has started with one beta and two release candidates [tagged](https://github.com/decred/dcrdex/tags) in March. All changes reported below will be included in the v0.6 release.
 
 Client changes:
 
@@ -180,20 +180,20 @@ Ethereum, client:
 
 - Improved handling of poor connections to RPC providers while the DEX client is [shutting down](https://github.com/decred/dcrdex/pull/2191).
 - Added [Ethereum wallet guide](https://github.com/decred/dcrdex/pull/2233) wiki page.
-- Added a 20% buffer to the [fee estimate](https://github.com/decred/dcrdex/pull/2234) when sending ETH to ensure it will succeed even if network's base fee jumps right before sending.
-- Updated to [Geth v1.11](https://github.com/decred/dcrdex/pull/2238). This was a required update for the Shanghai network upgrade scheduled on April 12, 2023.
+- Added a 20% buffer to the [fee estimates](https://github.com/decred/dcrdex/pull/2234) ensure sending ETH will succeed even if network's base fee jumps right before sending.
+- Updated to [Geth v1.11](https://github.com/decred/dcrdex/pull/2238). This is required for the Shanghai network upgrade scheduled on April 12, 2023.
 - Fixed token's [parent asset balance](https://github.com/decred/dcrdex/pull/2201) not being updated when cancelling an order involving that token.
 - Fixed [unconfirmed transactions](https://github.com/decred/dcrdex/pull/2211) not being reflected in the available balance.
 - Fixed error messages.
 
 Ethereum, server:
 
-- Allow server operators to rank RPC endpoints by [priority](https://github.com/decred/dcrdex/pull/2199) in the config file. The healthy connection with the highest priority will always be attempted first.
+- Allow server operators to rank RPC provider endpoints by [priority](https://github.com/decred/dcrdex/pull/2199) in the config file. The healthy connection with the highest priority will always be attempted first.
 
 Fidelity bonds:
 
 - [UI updates](https://github.com/decred/dcrdex/pull/2200) to replace registration fees with bonds, including integration of bonds into account import and export flows. Different cases are considered when restoring from same or new app seed, and when using existing or creating new DEX account.
-- Implemented bonds funded [with BTC](https://github.com/decred/dcrdex/pull/2196) in both the client and the server. It will be possible to switch bonds to use a different asset, e.g. from DCR to BTC.
+- Implemented bonds funding [with BTC](https://github.com/decred/dcrdex/pull/2196) in both the client and the server. It will be possible to switch bonds to use a different asset, e.g. from DCR to BTC.
 - Fixed "bond required" alert [not disappearing](https://github.com/decred/dcrdex/pull/2221) after bond was confirmed.
 
 Other changes:
@@ -209,7 +209,7 @@ Client changes on `master` towards the next release (likely v0.6.1):
 
 Other stuff:
 
-- DCRDEX was [rejected](https://github.com/getumbrel/umbrel-apps/pull/430#issuecomment-1452436145) in the official Umbrel App Store because "for crypto-related apps, we're exclusively accepting apps that solely focus on bitcoin". Two weeks later they [tweeted](https://twitter.com/umbrel/status/1636068336101621760) that censoring developers is anti-free market, which surprised some community members in context of the rejection. DCRDEX can still be used in Umbrel via the Community App Store feature by adding DEX repository and installing from there (follow [these instructions](https://github.com/decred/umbrel-app-store)). The difference is it requires more manual steps and exposes DCRDEX to fewer users compared to the central official Umbrel App Store.
+- DCRDEX was [rejected](https://github.com/getumbrel/umbrel-apps/pull/430#issuecomment-1452436145) in the official Umbrel App Store because "for crypto-related apps, we're exclusively accepting apps that solely focus on bitcoin". Two weeks later they [tweeted](https://twitter.com/umbrel/status/1636068336101621760) that censoring developers is anti-free market, which surprised some community members in context of the rejection. DCRDEX can still be installed via Umbrel by adding DEX'es own [Community App Store](https://github.com/decred/umbrel-app-store). The difference is it requires more manual steps and exposes DCRDEX to fewer users compared to the central official Umbrel App Store.
 - First mainnet swaps with DigiByte (DGB) have been [spotted](https://twitter.com/DigiByteCoin/status/1640820963532214273) on Twitter.
 
 ![](https://user-images.githubusercontent.com/9373513/225440857-28d2986c-418e-47cb-a000-cefa00fd5021.png) { _upload_ }
@@ -218,14 +218,14 @@ Other stuff:
 
 ![](https://user-images.githubusercontent.com/9373513/225440880-34c1de8f-f075-4a10-a369-04b21bd15816.png) { _upload_ }
 
-_Image: UI updates in DCRDEX to replace registration fees with time-locked bonds. UI design is a work in progress._
+_Image: UI updates in DCRDEX to replace registration fees with time-locked bonds. UI design is a work in progress. DCR amounts shown are not real._
 
 
 ### dcrdata
 
 _[dcrdata](https://github.com/decred/dcrdata) is an explorer for Decred blockchain and off-chain data like Politeia proposals, markets, and more._
 
-- Added an [allowed hosts](https://github.com/decred/dcrdata/pull/1958) middleware to ensure that any `Host` header value set in the request header is on a whitelist of hosts. This prevents invalid or unexpected `Host` values even if dcrdata is deployed without Nginx, which normally takes care of it.
+- Added an [allowed hosts](https://github.com/decred/dcrdata/pull/1958) middleware to ensure that any `Host` value set in the request header is on a whitelist of hosts. This prevents invalid or unexpected `Host` values even if dcrdata is deployed without Nginx, which normally takes care of it.
 - Updated Decred and third party [Node.js modules](https://github.com/decred/dcrdata/pull/1952) and Go [dependencies](https://github.com/decred/dcrdata/pull/1959) to their latest versions, and moved builds to Go 1.19 and 1.20.
 
 
@@ -239,7 +239,7 @@ _[dcrdocs](https://github.com/decred/dcrdocs) is the source code for Decred [use
 - Updated [VSP staking information](https://github.com/decred/dcrdocs/pull/1217) on multiple pages. This includes removing most references to Redeem Scripts, removing "legacy" staking instructions, and simplifying the remaining staking instructions. 
 - Consolidated the [pros and cons](https://github.com/decred/dcrdocs/pull/1217) of using VSP and solo staking.
 - Added a [note](https://github.com/decred/dcrdocs/pull/1217) to the Redeem Script page indicating they are no longer relevant.
-- The [Buying Tickets With dcrwallet](https://github.com/decred/dcrdocs/pull/1217) page has been optimized. It now clearly separates Voting and Purchasing tickets into two separate steps and removes any references to the outdated dcrstakepool system.
+- The [Buying Tickets With dcrwallet](https://github.com/decred/dcrdocs/pull/1217) page has been optimized. It now clearly separates Purchasing and Voting tickets in two steps and removes any references to the outdated dcrstakepool system.
 - Optimized [Docker build](https://github.com/decred/dcrdocs/pull/1222}): switched to much smaller image based on Alpine Linux, fixed MIME type for RSS feeds, and updated scripts to fail on error.
 
 
@@ -312,7 +312,7 @@ Other stuff and what to expect:
 - Image attachments are now delivered between Bison Relay and Matrix in both directions.
 - Prepaid invites have been [announced](https://twitter.com/behindtext/status/1641080004778897408), they will help to onboard new users without requiring them to obtain DCR externally and fund their Bison Relay wallet.
 - Next important [milestone](https://matrix.to/#/!aNnAOHkWUdNcEXRGjJ:decred.org/$oCz1kQZLJ_wc4Wwjq6z8x8numCsuZWyy7IyPWw3vDIA?via=decred.org&via=matrix.org&via=planetdecred.org) is prepaid group chat invites, which combine prepaid invites and bundled group chat invites.
-- The tech behind Bison Relay GUI (Flutter) provides infrastructure to build mobile apps from the same codebase. Effort is still needed to adjust the UI/UX to fit the mobile platform and fix the edge cases specific to mobile, but it's much easier compared to building mobile apps from scratch in native Android/iOS stacks.
+- The tech behind Bison Relay GUI (Flutter) provides infrastructure to build mobile apps from the same codebase. Effort is still required to adjust the UI/UX to fit the mobile platform and fix the edge cases specific to mobile, but it's much easier compared to building mobile apps from scratch in native Android and iOS stacks.
 - In the medium term developers plan to add pages and storefronts which will take quite some work to implement.
 
 
@@ -414,13 +414,13 @@ Decred's [Lightning Network](https://ln-map.jholdstock.uk/) explorer has seen 17
 
 [Metal Pay](https://metalpay.com/) has disabled DCR trading according to a [user report](https://matrix.to/#/!teQafvHMYpIbqLIieU:decred.org/$JvKPmPcgLw-bUW-7Tn2QFlqmRFtLQN0pPC-4Qq5u0yY?via=decred.org&via=matrix.org&via=t2bot.io). This is confirmed by their support site which no longer shows DCR in the list of [assets available for trading](https://help.metalpay.com/hc/en-us/articles/4409447985303-What-Cryptocurrencies-are-Available-for-Trading-on-Metal-Pay-). Assets supporting [deposits and withdrawals](https://help.metalpay.com/hc/en-us/articles/4409465061911-Which-Cryptocurrencies-Support-Deposit-and-Withdrawal-on-Metal-Pay-) do not include DCR either, and apparently never did. Other coins delisted in the same batch with DCR include BNB, BUSD, DGB, PAX and TUSD. In the bigger picture, Metal Pay [delisted](https://www.reddit.com/r/CryptoCurrency/comments/zlmxj3/delisting_notice_for_select_tokens_on_metal_pay/) 13 assets in December including XMR, ZEC, DASH and BSV. Since [November 2022](https://web.archive.org/web/20221207223930/https://help.metalpay.com/hc/en-us/articles/4409447985303-What-Cryptocurrencies-are-Available-for-Trading-on-Metal-Pay-) the list of tradeable assets reduced from 63 to just 15. Metal Pay first listed DCR in [April 2020](https://twitter.com/metalpaysme/status/1249745420206686208).
 
-Bittrex's [Instant Buy](https://global.bittrex.com/instant) feature did not work for DCR due to low liquidity, according to a [user report](https://matrix.to/#/!teQafvHMYpIbqLIieU:decred.org/$GWyVIBD5k_vDEUPxJK3QTOFqdAot8he-q4RNcxLsmqo?via=decred.org&via=matrix.org&via=t2bot.io). This did not affect limit orders.
+Bittrex's [Instant Buy](https://global.bittrex.com/instant) feature did not work for DCR due to low liquidity, according to a [user report](https://matrix.to/#/!teQafvHMYpIbqLIieU:decred.org/$GWyVIBD5k_vDEUPxJK3QTOFqdAot8he-q4RNcxLsmqo?via=decred.org&via=matrix.org&via=t2bot.io). This did not affect limit orders on the full trading interface.
 
-[Ledger](https://www.ledger.com/) representative came to Decred's Matrix chat room to share a [status update](https://matrix.to/#/!teQafvHMYpIbqLIieU:decred.org/$kwC-IMBBr92cstg707O_SlLBJEtCiOt_RmVTtE6S0dI?via=decred.org&via=matrix.org&via=t2bot.io). The summary is: Decred support in Ledger Live is broken for some users, it is taking a long time to fix, and Ledger would love to redirect affected users to third party services compatible with their devices in the situation where an integration is broken on Ledger's side. It means Ledger is excited about the effort to add direct Ledger support to [Decrediton](https://proposals.decred.org/record/609db9e).
+[Ledger](https://www.ledger.com/) representative came to Decred's Matrix chat room to share a [status update](https://matrix.to/#/!teQafvHMYpIbqLIieU:decred.org/$kwC-IMBBr92cstg707O_SlLBJEtCiOt_RmVTtE6S0dI?via=decred.org&via=matrix.org&via=t2bot.io). The summary is: Decred support in Ledger Live is broken for some users, it is taking a long time to fix, and Ledger would love to redirect affected users to third party services compatible with their devices in the situation where an integration is broken on Ledger's side. Therefore Ledger will benefit from the upcoming [direct integration](https://proposals.decred.org/record/609db9e) in Decrediton.
 
-Binance [announced](https://www.reddit.com/r/decred/comments/123tn1i/binance_close_isolated_margin_for_decred_and_some/) the delisting of DCR/BTC and DCR/USDT pairs from Isolated Margin. For context, NEBL and XVG are also part of this delisting batch. Regular (Spot) DCR trading is NOT affected by this. On a related note, personal quota in the Simple Earn product has [increased](https://matrix.to/#/!aNnAOHkWUdNcEXRGjJ:decred.org/$Iv4uASbdiLZIMZWbVVYFqY-motmynF19DH5MYvSRgNo?via=decred.org&via=matrix.org&via=planetdecred.org) from 300 to 10,000 DCR per person. As of Mar 27, Simple Earn showed 1.67% APR (while staking DCR directly yields about 7%/year).
+Binance [announced](https://www.reddit.com/r/decred/comments/123tn1i/binance_close_isolated_margin_for_decred_and_some/) the delisting of DCR/BTC and DCR/USDT pairs from Isolated Margin. For context, NEBL and XVG were also part of this delisting batch. Regular (Spot) DCR trading is NOT affected by this. At the same time, personal quota in the Simple Earn product has [increased](https://matrix.to/#/!aNnAOHkWUdNcEXRGjJ:decred.org/$Iv4uASbdiLZIMZWbVVYFqY-motmynF19DH5MYvSRgNo?via=decred.org&via=matrix.org&via=planetdecred.org) from 300 to 10,000 DCR per person. As of Mar 27, Simple Earn showed 1.67% APR while staking DCR directly yields about 7%/year.
 
-Bittrex made a big announcement about [shutting down U.S. operations](https://twitter.com/BittrexExchange/status/1641879884682387457) due to regulatory and economic challenges. Per their [timeline](https://bittrex.zendesk.com/hc/en-us/articles/10080271948701), fiat withdrawals must conclude by Apr 24 and crypto withdrawals by Apr 29 (sooner is better). Bittrex Global and its non-U.S. customers are unaffected. The move came after Bittrex was [fined](https://www.reuters.com/business/finance/crypto-exchange-bittrex-fined-53-mln-by-us-treasury-dept-2022-10-11/) in December for $29 million for violating sanctions and AML regulations. Despite closing U.S. operations Bittrex may be hit by a [lawsuit](https://reason.com/2023/04/19/sec-sues-crypto-exchange-bittrex-shortly-after-it-announces-its-leaving-u-s-markets/) from the SEC for operating an unregistered securities exchange.
+Bittrex made a big announcement about [shutting down U.S. operations](https://twitter.com/BittrexExchange/status/1641879884682387457) due to regulatory and economic challenges. Per their [timeline](https://bittrex.zendesk.com/hc/en-us/articles/10080271948701), fiat withdrawals must conclude by Apr 24 and crypto withdrawals by Apr 29 (sooner is better). Bittrex Global is not (directly) affected and will continue operations for non-U.S. customers. The move came after Bittrex was [fined](https://www.reuters.com/business/finance/crypto-exchange-bittrex-fined-53-mln-by-us-treasury-dept-2022-10-11/) in December for $29 million for violating sanctions and AML regulations. Despite closing U.S. operations Bittrex may be hit by another [lawsuit](https://reason.com/2023/04/19/sec-sues-crypto-exchange-bittrex-shortly-after-it-announces-its-leaving-u-s-markets/) from the SEC for operating an unregistered securities exchange.
 
 Join our [#ecosystem](https://chat.decred.org/#/room/#ecosystem:decred.org) chat to follow Decred ecosystem updates.
 
@@ -437,19 +437,19 @@ Monde PR's achievements:
 Secured the following media placements:
 
 - An article in [Cointelegraph](https://cointelegraph.com/news/trezor-crypto-wallet-s-move-into-the-semiconductor-business-isn-t-for-everyone) featuring commentary from @jz on Trezor crypto wallet's move into the semiconductor business. The article was syndicated to 14 publications including [Ethereum Today](https://www.ethereum.today/trezor-crypto-wallets-move-into-the-semiconductor-business-isnt-for-everyone/) and [Bitcoin Insider](https://www.bitcoininsider.org/article/207994/trezor-crypto-wallets-move-semiconductor-business-isnt-everyone).
-- An article in [CoinDesk](https://www.coindesk.com/markets/2023/03/16/crypto-observers-believe-us-banking-crisis-could-strengthen-crypto-ecosystem-in-the-long-term/) featuring commentary from @jz on the long term effects of the U.S. banking crisis on crypto. The article was syndicated to three publications including [Yahoo! Finance](https://finance.yahoo.com/news/crypto-observers-believe-u-banking-113017805.html) and [Markets Insider](https://markets.businessinsider.com/news/currencies/crypto-observers-believe-us-banking-crisis-could-strengthen-crypto-ecosystem-in-the-long-term-1032172484).
+- An article in [CoinDesk](https://www.coindesk.com/markets/2023/03/16/crypto-observers-believe-us-banking-crisis-could-strengthen-crypto-ecosystem-in-the-long-term/) featuring commentary from @jz on the long term effects of the U.S. banking crisis on crypto. The article was syndicated to 3 publications including [Yahoo! Finance](https://finance.yahoo.com/news/crypto-observers-believe-u-banking-113017805.html) and [Markets Insider](https://markets.businessinsider.com/news/currencies/crypto-observers-believe-us-banking-crisis-could-strengthen-crypto-ecosystem-in-the-long-term-1032172484).
 
 
 ## Events
 
 **Attended:**
 
-- @arij gave a [presentation](https://decredcommunity.github.io/events/index/20230304.1) at Technopark Casablanca on the theme "Blockchain and Entrepreneurship". It started with an intro to blockchain tech use cases and its history, followed by a demo of Decrediton and Politeia. The attendees were of different backgrounds including finance, energy and IT sectors. The majority came in response to a LinkedIn announcement.
+- @arij gave a [presentation](https://decredcommunity.github.io/events/index/20230304.1) at Technopark Casablanca on the theme "Blockchain and Entrepreneurship". It started with an intro to blockchain tech use cases and history, followed by a demo of Decrediton and Politeia. The attendees were of different backgrounds including finance, energy and IT sectors. The majority came in response to a LinkedIn announcement.
 - [Second event](https://decredcommunity.github.io/events/index/20230311.1) by the Decred Arabia team was co-organized by the sports association of Aïn Chock and the District Council of Aïn Chock Casablanca. @khalidesi presented an introduction to blockchains on day 1 and application of blockchains and the Decred example on day 2. The theme was to demonstrate how the blockchain can improve the way businesses operate and promote greater economic and social inclusion.
 
 **Upcoming**:
 
-- @elian will present the latest updates from Decred in [Monerotopia](https://monerotopia.com/) in Mexico City on May 5, 6, and 7.
+- @elian will present the latest updates from Decred in [Monerotopia](https://monerotopia.com/) in Mexico City on May 5, 6, and 7. Decred will have a small booth.
 
 
 ## Media
@@ -474,13 +474,13 @@ Decred Magazine engagement stats for March:
 **Videos:**
 
 - [Accounts in Decrediton - Money Evolved](https://www.decredmagazine.com/accounts-in-decrediton/) by @phoenixgreen
-- [Timestamply - Redesign for timestamping digital existence](https://www.decredmagazine.com/timestamply-redesign-for-timestamping-digital-existence/) by @phoenixgreen - also as a [text post](https://www.decredmagazine.com/timestamply-redesign-for-timestamping-digital-existence/) and as a [podcast](https://podcasters.spotify.com/decred-magazine/episodes/Timestamply---Redesign-for-timestamping-digital-existence-e204bff) on Spotify
-- [DCRDEX 0.6 is coming - multi-chain wallets, market maker bots, DigiByte support & more](https://www.decredmagazine.com/dcrdex-0-6-is-coming/) by @phoenixgreen - also as a text post and as a [podcast](https://podcasters.spotify.com/pod/show/decred-magazine/episodes/DCRDEX-0-6-is-coming-e210q07) on Spotify
+- [Timestamply - redesign for timestamping digital existence](https://www.decredmagazine.com/timestamply-redesign-for-timestamping-digital-existence/) by @phoenixgreen - also as a [text post](https://www.decredmagazine.com/timestamply-redesign-for-timestamping-digital-existence/) and as a [Spotify podcast](https://podcasters.spotify.com/decred-magazine/episodes/Timestamply---Redesign-for-timestamping-digital-existence-e204bff)
+- [DCRDEX 0.6 is coming - multi-chain wallets, market maker bots, DigiByte support & more](https://www.decredmagazine.com/dcrdex-0-6-is-coming/) by @phoenixgreen - also as a text post and as a [podcast](https://podcasters.spotify.com/pod/show/decred-magazine/episodes/DCRDEX-0-6-is-coming-e210q07)
 - [Timestamply tutorial demonstration - Decred time stamping](https://www.youtube.com/watch?v=Vw1J5nleUK8) by @phoenixgreen - also as a [text post](https://www.decredmagazine.com/timestamply-tutorial/)
 
 Livestream:
 
-- [State of the Market - Content and development proposals for Decred feat. Cointelegraph](https://www.decredmagazine.com/state-of-the-market-content-and-development-proposals/) by @phoenixgreen and @Exitus joined by Matthew and Yana - mirrored on [Spotify](https://podcasters.spotify.com/pod/show/decred-magazine/episodes/State-of-the-market---Content-and-Development-Proposals-e209gfm)
+- [State of the Market - Content and development proposals for Decred feat. Cointelegraph](https://www.decredmagazine.com/state-of-the-market-content-and-development-proposals/) by @phoenixgreen and @Exitus joined by Matthew and Yana - also as a [podcast](https://podcasters.spotify.com/pod/show/decred-magazine/episodes/State-of-the-market---Content-and-Development-Proposals-e209gfm)
 
 **Audio:**
 
@@ -502,7 +502,7 @@ Livestream:
 
 **Discussions:**
 
-- Effects of the current banking crisis on the [crypto markets](https://twitter.com/BisonDigest/status/1636523254050324481) and related issues. Follow [@BisonDigest](https://twitter.com/BisonDigest) for best convos spotted on Bison Relay, or better, [try it yourself](https://bisonrelay.org/) to not miss any.
+- Effects of the current banking crisis on the [crypto markets](https://twitter.com/BisonDigest/status/1636523254050324481) and related issues. Follow [@BisonDigest](https://twitter.com/BisonDigest) for best convos spotted on Bison Relay, or better, [join Bison Relay](https://bisonrelay.org/) to not miss any.
 - [Survey of good marketing ideas](https://twitter.com/exitusdcr/status/1639809057870721024)
 
 **Other:**
