Add line and small reorder

--- a/journal/202303.md
+++ b/journal/202303.md
@@ -36,6 +36,8 @@ A major change is coming to Decred's consensus and economics. A [proposal](https
 
 ## Bison Relay v0.1.6 Release Candidate
 
+Two releases came out in March focused on improving group chat experience.
+
 Highlights of v0.1.5 release:
 
 - New Payment Stats page
@@ -48,11 +50,11 @@ Highlights of v0.1.5 release:
 Highlights of v0.1.6 Release Candidate 1:
 
 - New version of group chats with support for multiple admins
-- Sidebar notification for new messages
-- More visible New Post button
-- Highlighting of messages with user's nick name
-- All post comments are directed to the original post, comments on relayed copies are disabled
+- Sidebar notifications for new messages
 - Automatic group chat invites bundled in invite files
+- Highlighting of messages with user's nick name
+- More visible New Post button
+- All post comments are directed to the original post, comments on relayed copies are disabled
 - Many bug fixes and UI improvements in both GUI and CLI apps
 
 Get the latest release binaries on [GitHub](https://github.com/companyzero/bisonrelay/releases) (as of writing the [Downloads page](https://bisonrelay.org/download/) at bisonrelay.org still shows v0.1.4). Bug reports and feedback are welcome in the [GitHub issue tracker](https://github.com/companyzero/bisonrelay/issues) and the [#br chat](https://chat.decred.org/#/room/#br:decred.org) on Matrix or Bison Relay itself.
@@ -272,8 +274,8 @@ End user binaries have been released for Bison Relay v0.1.5 with all changes and
 
 Common changes in GUI and CLI apps in v0.1.6:
 
-- Improved error handling and logging of [failed payments](https://github.com/companyzero/bisonrelay/pull/156) (such as tipping).
 - Implemented [new version of group chats](https://github.com/companyzero/bisonrelay/pull/155) that introduces support for multiple admins. Admins can invite or remove members, and assign or revoke admin privileges. The permission to kill the group chat is still only possible by the special Owner role. Existing group chats will have an option to upgrade to new version.
+- Improved error handling and logging of [failed payments](https://github.com/companyzero/bisonrelay/pull/156) (such as tipping).
 - Improved help text for [adding LN receive capacity](https://github.com/companyzero/bisonrelay/pull/166).
 - Disallow comments on [relayed posts](https://github.com/companyzero/bisonrelay/pull/162). Commenting on posts will require a key exchange with the original author. Also, once the original post is received from the author, all relayed copies will be removed in favor of the original.
 - Fixed bug preventing to accept [multiple group chat invites](https://github.com/companyzero/bisonrelay/pull/154) at the same time.
